# rusty-gopher

./: .gitlab-ci.yml  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
src/: directoryentry.rs  gophermap.rs  gophertype.rs  libcwrapper.rs  main.rs
