[package]
name = "rusty-gopher"
version = "0.1.0"
authors = ["Stefan Luecke <glaxx@glaxx.net>"]

[dependencies]
docopt = "0.6"
docopt_macros = "0.6"
rustc-serialize = "0.3"
rust-ini = "0.9"
libc = "0.2"
slog = "1.3"
slog-term = "1.3"
clippy = {version = "*", optional = true}

[features]
default = []

# TODO: delete replace section when
# https://github.com/rust-lang/libc/pull/476
# got merged.
[replace]
"libc:0.2.18" = { git = "https://github.com/glaxx/libc.git" }
